[metadata]
name = pyFHE
version = 0.0.1
author = Kotaro MATSUOKA
author_email = dirty.knife603@gmail.com
description = Python3 implementaion of TFHE
long_description = file:README.md
url = https://github.com/virtualsecureplatform/pyFHE
license = Apache License, Version 2.0
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    
[options]
zip_safe = False
packages = find: